--- a/lesson_01/semantic.html
+++ b/lesson_01/semantic.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Semantic</title>
+  </head>
+  <body>
     <header>
-        <h1>Semantic containers and more:</h1>
-        <!-- тег ссылка с атрибутом href -->
-        <!-- target со значением _blank открывает ссылку в новой вкладке-->
-        <nav>
-            <a 
-            target="_blank"
-            href="https://developer.mozilla.org/ru/docs/Learn/HTML/Introduction_to_HTML/Getting_started">MDN html</a>
-            >
-            <a href="https://www.w3schools.com/html/html_entities.asp#:~:text=To%20display%20a%20less%20than,to%20remember%20than%20entity%20numbers">HTML Entities</a>
-        </nav>
+      <h1>Semantic and more:</h1>
+      <!-- тег ссылка с аттрибутом href -->
+      <!-- target со значением _blank открывает ссылку в новой вкладке -->
+      <nav>
+        <a
+          target="_blank"
+          href="https://developer.mozilla.org/ru/docs/Learn/HTML/Introduction_to_HTML/Getting_started"
+          >MDN html</a
+        >
+        <a
+          target="_blank"
+          href="https://www.w3schools.com/html/html_entities.asp#:~:text=To%20display%20a%20less%20than,to%20remember%20than%20entity%20numbers."
+          >HTML Entities</a
+        >
+      </nav>
     </header>
     <main>
-        <section>
-            <h2>Новости спорта</h2>
-            <article>
-                <h4>Чемпионат Европы по футболу пройдет в Германии</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quisquam corrupti, blanditiis itaque quis vitae ipsam harum iure, enim nostrum reiciendis esse et saepe eligendi adipisci? Ipsum atque eum eveniet!</p>
-            </article>
-            <article>
-                <h4>Чемпионат Европы по футболу пройдет в Германии</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quisquam corrupti, blanditiis itaque quis vitae ipsam harum iure, enim nostrum reiciendis esse et saepe eligendi adipisci? Ipsum atque eum eveniet!</p>
-            </article>
-        </section>
-        <section>
-            <h2>Погода</h2>
-            <article>
-                <h4>В Потсдаме солнечно</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus, ad nam aliquam impedit nobis quos. Ipsam dolore aspernatur esse voluptatibus, facilis ex sunt doloribus odit vero a ipsum officiis!</p>
-            </article>
-            <article>
-                <h4>В Гамбурге дождь</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus, ad nam aliquam impedit nobis quos. Ipsam dolore aspernatur esse voluptatibus, facilis ex sunt doloribus odit vero a ipsum officiis!</p>
-            </article>
-        </section>
+      <section>
+        <h2>Новости спорта</h2>
+        <article>
+          <h4>Чемпионат Европы по футболу пройдет в Германии</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            sint, provident illo ex nobis pariatur consequatur quam aut.
+            Pariatur natus reprehenderit iste, libero nisi iure nam ea beatae
+            culpa voluptas.
+          </p>
+        </article>
+        <article>
+          <h4>Чемпионат Европы по футболу пройдет в Германии</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            sint, provident illo ex nobis pariatur consequatur quam aut.
+            Pariatur natus reprehenderit iste, libero nisi iure nam ea beatae
+            culpa voluptas.
+          </p>
+        </article>
+      </section>
+      <section>
+        <h2>Погода</h2>
+        <article>
+          <h4>В Потсдаме солнечно</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            sint, provident illo ex nobis pariatur consequatur quam aut.
+            Pariatur natus reprehenderit iste, libero nisi iure nam ea beatae
+            culpa voluptas.
+          </p>
+        </article>
+        <article>
+          <h4>В Гамбурге дождь</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio
+            sint, provident illo ex nobis pariatur consequatur quam aut.
+            Pariatur natus reprehenderit iste, libero nisi iure nam ea beatae
+            culpa voluptas.
+          </p>
+        </article>
+      </section>
     </main>
     <footer>
-        ©
+      <h5>Подвал footer сайта:</h5>
+      <div>
+        <p>...a этот текст в обычном div контейнере</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
+
