--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
 <body>
     <a
           target="_blank"
-          href="http://127.0.0.1:5500/homework_01/myLandingPage.html"
+          href="homework_01/myLandingPage.html"
           >homework_01</a
         >
         
     <a
         target="_blank"
-        href="http://127.0.0.1:5500/homework_02/index.html"
+        href="homework_02/index.html"
         >homework_02</a
       >
     
-      <a
+    <a
       target="_blank"
-      href="http://127.0.0.1:5500/homework_03/index.html"
+      href="homework_03/index.html"
       >homework_03</a
     >
 
     <a
       target="_blank"
-      href="http://127.0.0.1:5500/homework_03/index1.html"
+      href="homework_03/index1.html"
+      >homework_03</a
+    >
+
+    <a
+      target="_blank"
+      href="lesson_04/index.html"
       >homework_03</a
     >
 </body>
