--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
       href="lesson_04/index.html"
       >homework_03</a
     >
+
+    <a
+      target="_blank"
+      href="homework_04/index.html"
+      >homework_03</a
+    >
 </body>
 </html>
