--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <a
       target="_blank"
       href="lesson_04/index.html"
-      >homework_03</a
+      >lesson_04</a
     >
 
     <a
       target="_blank"
       href="homework_04/index.html"
-      >homework_03</a
+      >homework_04</a
     >
 </body>
 </html>
