--- a/index.html
+++ b/index.html
@@ -1,45 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <a
-          target="_blank"
-          href="homework_01/myLandingPage.html"
-          >homework_01</a
-        >
-        
-    <a
-        target="_blank"
-        href="homework_02/index.html"
-        >homework_02</a
-      >
-    
-    <a
-      target="_blank"
-      href="homework_03/index.html"
-      >homework_03</a
-    >
+  <a target="_blank" href="homework_01/myLandingPage.html">homework_01</a>
 
-    <a
-      target="_blank"
-      href="homework_03/index1.html"
-      >homework_03</a
-    >
+  <a target="_blank" href="homework_02/index.html">homework_02</a>
 
-    <a
-      target="_blank"
-      href="lesson_04/index.html"
-      >lesson_04</a
-    >
+  <a target="_blank" href="homework_03/index.html">homework_03</a>
 
-    <a
-      target="_blank"
-      href="homework_04/index.html"
-      >homework_04</a
-    >
+  <a target="_blank" href="homework_03/index1.html">homework_03</a>
+
+  <a target="_blank" href="lesson_04/index.html">lesson_04</a>
+
+  <a target="_blank" href="homework_04/index.html">homework_04</a>
 </body>
+
 </html>
