--- a/lesson_04/index.html
+++ b/lesson_04/index.html
@@ -30,6 +30,16 @@
         <div class content="item3"><img class="image" src="3.png"></div>
         <div class content="item4"><img class="image" src="4.jpg"></div>
         <div class content="item5"><img class="image" src="5.jpg"></div>
+        <div class content="item1"><img class="image" src="1.jpg"></div>
+        <div class content="item2"><img class="image" src="2.jpg"></div>
+        <div class content="item3"><img class="image" src="3.png"></div>
+        <div class content="item4"><img class="image" src="4.jpg"></div>
+        <div class content="item5"><img class="image" src="5.jpg"></div>
+        <div class content="item1"><img class="image" src="1.jpg"></div>
+        <div class content="item2"><img class="image" src="2.jpg"></div>
+        <div class content="item3"><img class="image" src="3.png"></div>
+        <div class content="item4"><img class="image" src="4.jpg"></div>
+        <div class content="item5"><img class="image" src="5.jpg"></div>
     </div>
 </main>
 </body>
