--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -19,12 +19,64 @@
             </div>
             <div class content="item4"><img class="pic" src="oscar.svg">
                 <p>Оскар-2023</p>
-            </div>            
-            <input type="text" placeholder="Фильмы, сериалы, пер">
+            </div>
+            <input type="text" placeholder="Фильмы, сериалы, персоны">
         </nav>
 
     </header>
-    <main></main>
+    <main>
+        <div class="card">
+            <img class="poster" src="movie1.webp" alt="">
+            <div class="rating green">9.8</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie2.webp" alt="">
+            <div class="rating red">4.6</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie1.webp" alt="">
+            <div class="rating green">9.8</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie2.webp" alt="">
+            <div class="rating red">4.6</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie1.webp" alt="">
+            <div class="rating green">9.8</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie2.webp" alt="">
+            <div class="rating red">4.6</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie1.webp" alt="">
+            <div class="rating green">9.8</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie2.webp" alt="">
+            <div class="rating red">4.6</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie1.webp" alt="">
+            <div class="rating green">9.8</div>
+            <div class="tickets">Билеты</div>
+        </div>
+        <div class="card">
+            <img class="poster" src="movie2.webp" alt="">
+            <div class="rating red">4.6</div>
+            <div class="tickets">Билеты</div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
