--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -25,55 +25,60 @@
 
     </header>
     <main>
-        <div class="card">
-            <img class="poster" src="movie1.webp" alt="">
-            <div class="rating green">9.8</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie2.webp" alt="">
-            <div class="rating red">4.6</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie1.webp" alt="">
-            <div class="rating green">9.8</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie2.webp" alt="">
-            <div class="rating red">4.6</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie1.webp" alt="">
-            <div class="rating green">9.8</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie2.webp" alt="">
-            <div class="rating red">4.6</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie1.webp" alt="">
-            <div class="rating green">9.8</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie2.webp" alt="">
-            <div class="rating red">4.6</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie1.webp" alt="">
-            <div class="rating green">9.8</div>
-            <div class="tickets">Билеты</div>
-        </div>
-        <div class="card">
-            <img class="poster" src="movie2.webp" alt="">
-            <div class="rating red">4.6</div>
-            <div class="tickets">Билеты</div>
+        <div class="gridContainer">
+
+            <div class="card">
+                <div class="poster__wrapper">
+                    <img class="poster" src="movie1.webp" alt="">
+                </div>
+                <div class="rating green">9.8</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie2.webp" alt="">
+                <div class="rating red">4.6</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie1.webp" alt="">
+                <div class="rating green">9.8</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie2.webp" alt="">
+                <div class="rating red">4.6</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie1.webp" alt="">
+                <div class="rating green">9.8</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie2.webp" alt="">
+                <div class="rating red">4.6</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie1.webp" alt="">
+                <div class="rating green">9.8</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie2.webp" alt="">
+                <div class="rating red">4.6</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie1.webp" alt="">
+                <div class="rating green">9.8</div>
+                <div class="tickets">Билеты</div>
+            </div>
+            <div class="card">
+                <img class="poster" src="movie2.webp" alt="">
+                <div class="rating red">4.6</div>
+                <div class="tickets">Билеты</div>
+            </div>
         </div>
     </main>
     <footer></footer>
