--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <a target="_blank" href="lesson_04/index.html">lesson_04</a>
 
   <a target="_blank" href="homework_04/index.html">homework_04</a>
+
+  <a target="_blank" href="lesson_08/index.html">lesson_08</a>
 </body>
 
 </html>
