--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <a target="_blank" href="homework_04/index.html">homework_04</a>
 
   <a target="_blank" href="lesson_08/index.html">lesson_08</a>
+
+  <a target="_blank" href="homework_09/index.html">homework_09</a>
 </body>
 
 </html>
