--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <a target="_blank" href="lesson_08/index.html">lesson_08</a>
 
   <a target="_blank" href="homework_09/index.html">homework_09</a>
+
+  <a target="_blank" href="lesson_25/index.html">homework_09</a>
 </body>
 
 </html>
