--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <a target="_blank" href="homework_09/index.html">homework_09</a>
 
-  <a target="_blank" href="lesson_25/index.html">lesson_25</a>
+  <a target="_blank" href="lesson_25/Weather%20App/index.html">lesson_25</a>
 </body>
 
 </html>
